Fix zero tech section alignment

--- a/src/containers/PageContainer/elements/Header/elements/InfoButton/elements/InfoPanel/_info-panel.scss
+++ b/src/containers/PageContainer/elements/Header/elements/InfoButton/elements/InfoPanel/_info-panel.scss
@@ -45,8 +45,11 @@
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				width: 25%;
 				height: 60px;
+
+				&.max-4 {
+					width: 25%;
+				}
 
 				> a {
 					display: flex;
